--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,15 +21,26 @@ jobs:
       run: |
         python -m pip install --upgrade pip wheel
         pip install -e .
-    - uses: Harmon758/postgresql-action@v1.0.0
-      name: Set up postgres
-      with:
-        postgresql version: '12'
-        postgresql db: 'postgres'
-        postgresql user: 'postgres'
+
+    # Use preinstalled PostgreSQL
+    - name: Start PostgreSQL on Ubuntu
+      run: |
+        sudo systemctl start postgresql.service
+        pg_isready
+
+    # Change user name and password to meet your requirements
+    - name: Create additional user
+      run: |
+        sudo -u postgres psql --command="CREATE USER babbage" --command="\du"
+
+    # Change database name to meet your requirements
+    - name: Create additional database
+      run: |
+        sudo -u postgres createdb --owner=joe babbage psql --username=babbage --host=localhost --list timetable
+
     - name: Install test dependencies
       run: pip install pytest==7.4.0 pytest-flask==1.2.0
     - name: Run tests
       run: pytest
       env:
-        BABBAGE_TEST_DB: postgresql://postgres@localhost:5432/postgres
+        BABBAGE_TEST_DB: postgresql://babbage@localhost:5432/babbage
