--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,16 @@ jobs:
         sudo systemctl start postgresql.service
         pg_isready
 
+    # Change user name and password to meet your requirements
+    - name: Create additional user
+      run: |
+        sudo -u postgres psql --command="CREATE USER babbage" --command="\du"
+
+    # Change database name to meet your requirements
+    - name: Create additional database
+      run: |
+        sudo -u postgres createdb --owner=babbage babbage
+
     - name: Install test dependencies
       run: pip install pytest==7.4.0 pytest-flask==1.2.0
     - name: Run tests
